[tool.poetry]
name = "minos-dst"
version = "0.1.0"
description = "Package for opening MINOS/MINOS+ datasets (stored as DST files) using the Uproot Python module."
authors = ["Aditya Marathe"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uproot = "^5.4.0"
notebook = "^7.2.2"
matplotlib = "^3.9.2"
ipywidgets = "^8.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
